# devaps

./: README.md  ctc.rs  meta-todos.txt  sonar-project.properties  todos.txt
.github/workflows/: build.yml
cal-rs/: Cargo.toml
cal-rs/src/: back.rs  front.rs  main.rs
filte-rs/src/: lib.rs  main.rs
filte2-rs/: Cargo.toml
filte2-rs/src/: lib.rs  main.rs  reader.rs
fpwe/gs2-rs/: shell.nix
fpwe/gs2-rs/src/: lib.rs
fpwe/pwd-rs/src/: lib.rs
fpwe/pwd-rs/src/standalone/: main.rs
gs2-rs/src/: lib.rs  main.rs
lsr/src/: lib.rs  main.rs
proj/: Cargo.toml
proj/src/: lib.rs  main.rs
pwd-rs/src/: lib.rs
rehan/: Cargo.toml  birthday-email.rehan.txt
rehan/src/: build.rs  lib.rs  main.rs  parse.rs  reader.rs  rehan-prepare.rs
rot/: Cargo.toml
rot/graphs/: link-prop.rot  node-implicit.rot
rot/src/: builder.rs  export.rs  graph.rs  lib.rs  main.rs  parse.rs  parse2.rs
size/: Cargo.toml
size/src/: lib.rs  main.rs
srun/: Cargo.toml
srun/src/: lib.rs  main.rs
tmpl/src/: lib.rs
todo-rs/: Cargo.toml  is.json  should.json
todo-rs/src/: conf.rs  filstu.rs  lib.rs  main.rs  out.rs
