[package]
name = "cal-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ansi_term = "0.12.1"
chrono = "0.4.38"
clap = "4.5.6"
color-print = "0.3.6"
eyre = "0.6.12"
serde = { version = "1.0.203", features = ["derive"] }
thiserror = "1.0.61"
toml = "0.8.14"
