[package]
name = "cal-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.38"
color-print = "0.3.6"
eyre = "0.6.12"
serde = { version = "1.0.203", features = ["derive"] }
thiserror = "1.0.61"
toml = "0.8.14"
